--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 applications:
 - disk_quota: 1024M
-  host: itucsdb17_xxx
-  name: itucsdb17_xxx
+  host: itucsdb170000
+  name: itucsdb170000
   path: .
   domain: mybluemix.net
   instances: 1
