--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,15 @@ target/
 
 # Vagrant
 .vagrant/
+
+\.idea/inspectionProfiles/Project_Default\.xml
+
+\.idea/itucsdb1705\.iml
+
+\.idea/misc\.xml
+
+\.idea/modules\.xml
+
+\.idea/vcs\.xml
+
+\.idea/workspace\.xml
